# platano-theme

./: .gitignore  Makefile.am  README.md  configure.ac  meson.build  meson_options.txt
data/: Makefile.am  index.theme  index.theme-compact  index.theme-dark  index.theme-dark-compact  index.theme-light  index.theme-light-compact
src/: README  _animations.scss  _colors-public.scss  _colors.scss  _drawing.scss  _key_colors.scss  _key_colors.scss.in  _main.scss  _variables.scss  compile-gresource.sh  gtk.gresource.xml.in  index.theme.in  meson.build  test-colors.scss
src/assets/: assets.svg.in  meson.build  render-asset.sh  render-assets.sh
src/extra/: Makefile.am
src/extra/airforsteam/: recolor-air.sh
src/extra/airforsteam/Resource/colors/: platano-noir.styles.in
src/extra/airforsteam/Resource/themes/: _platano-noir.styles
src/extra/airforsteam/sass/: _air-colors.scss
src/extra/gtksourceview/: platano-dark.xml.in  platano-light.xml.in  recolor-gtksourceview.sh
src/extra/gtksourceview/sass/: _gtksourceview-colors.scss
src/extra/plank/: dock-dark.theme  dock-light.theme
src/extra/telegram/: recolor-telegram.sh
src/extra/telegram/dark/: colors.tdesktop-theme.in
src/extra/telegram/light/: colors.tdesktop-theme.in
src/extra/telegram/mixed/: colors.tdesktop-theme.in
src/extra/telegram/sass/: _telegram-colors.scss
src/extra/tweetdeck/: recolor-cdk.sh
src/gnome-shell/asset/assets-gnome-shell/dark/: checkbox-hover.svg.in  checkbox.svg.in
src/gnome-shell/asset/assets-gnome-shell/light/: checkbox-hover.svg.in
src/gnome-shell/asset/assets-gnome-shell/mixed/: checkbox.svg.in
src/gnome-shell/sass/: compile-gresource.sh
src/gnome-shell/sass/common/: _colors.scss
src/gnome-shell/sass/gnome-shell/: README.window-list  _extension-workspaces-to-dock.scss  _extensions.scss
src/gnome-shell/sass/gnome-shell/3.34/: classic-light.scss  gdm3-compact.scss  gdm3-dark-compact.scss  gdm3-dark.scss  gdm3-light.scss  gnome-shell-dark-compact.scss  gnome-shell-light.scss  pad-osd.scss  workspaces-to-dock-light.scss
src/gnome-shell/sass/gnome-shell/3.36/: classic-dark.scss  classic-light.scss  gdm3-compact.scss  gdm3-light-compact.scss  gdm3.scss  gnome-shell-compact.scss  gnome-shell-dark-compact.scss  gnome-shell-light.scss  stylesheet-light.scss  workspaces-to-dock-dark.scss  workspaces-to-dock-light.scss
src/gnome-shell/sass/gnome-shell/3.38/: classic-light.scss  gdm3-compact.scss  gdm3-dark-compact.scss  gdm3.scss  gnome-shell-dark.scss  gnome-shell-light.scss  pad-osd.scss  stylesheet-light.scss  workspaces-to-dock-dark.scss  workspaces-to-dock-light.scss
src/gtk/: Makefile.am
src/gtk-2.0/: gtkrc-dark.in  gtkrc-light.in  parse-gtk2.sh
src/gtk-2.0/assets/: clone-assets-gtk2.sh
src/gtk-2.0/sass/: _gtk2-colors.scss
src/gtk-3.0/: meson.build
src/gtk-3.0/assets/: recolor-assets-gtk3.sh  render-assets-gtk3.sh
src/gtk-3.0/sass/: gtk-dark-compact.scss  gtk-dark.scss  gtk-light-compact.scss  gtk-light.scss  gtk-mixed-compact.scss  gtk-mixed.scss  gtk.scss.in  gtk3.scss.in
src/gtk-3.0/sass/budgie/: _borders.scss  _dialogs.scss  _icon_tasklist.scss  _lightdm.scss  _main.scss  _menu.scss  _nightlight.scss  _notifications.scss  _panel.scss  _popover.scss  _raven.scss  _switcher.scss  _widgets.scss
src/gtk-4.0/: meson.build
src/gtk/asset/: assets-gtk2.svg.in  assets-gtk3.svg.in
src/gtk/asset/assets-gtk2-scripts/: recolor-assets-gtk2.sh  render-assets-gtk2.sh
src/gtk/asset/assets-gtk3-scripts/: render-assets-gtk3.sh
src/gtk/gtk-2.0/: gtkrc.in
src/gtk/sass/: README  _main.scss  compile-gresource.sh  gtk-dark.gresource.xml.in  parse-sass.sh
src/gtk/sass/2.0/: _gtk2-colors.scss
src/gtk/sass/3.20/: gtk-dark-compact.scss  gtk-dark.scss  gtk-light-compact.scss  gtk-light.scss  gtk-mixed-compact.scss  gtk-mixed.scss
src/gtk/sass/3.22/: gtk-dark-compact.scss  gtk-dark.scss  gtk-light-compact.scss  gtk-light.scss  gtk-mixed-compact.scss  gtk-mixed.scss
src/gtk/sass/3.24/: gtk-mixed-compact.scss  gtk-mixed.scss
src/gtk/sass/4.0/: gtk-dark-compact.scss  gtk-dark.scss  gtk-light-compact.scss  gtk-light.scss  gtk-mixed-compact.scss  gtk-mixed.scss
src/gtk/sass/common/: _3rd-party.scss  _colors-public.scss  _colors.scss  _common.scss  _components.scss  _drawing.scss  _misc.scss  _widgets.scss  _xfce-notify.scss
src/gtk/sass/xfce-notify/: xfce-notify-4.0-dark.scss  xfce-notify-4.0-light.scss  xfce-notify-4.0-mixed.scss
src/libadwaita/: gtk.css
src/shell/: Makefile.am
src/shell/asset/: assets-gnome-shell.txt  clone-assets-cinnamon.sh  clone-assets-gnome-shell.sh  render-assets-cinnamon-thumb.sh
src/shell/sass/: README  compile-gresource.sh  parse-sass.sh
src/shell/sass/cinnamon/: _common.scss
src/shell/sass/common/: _colors.scss  _drawing.scss
src/shell/sass/gnome-shell/: _common.scss  _extension-classic.scss  _extension-window-list.scss  _extension-workspaces-to-dock.scss  _extensions.scss  _pad-osd-window.scss
src/widgets/: _appicons.scss  _base.scss  _buttons.scss  _calendar.scss  _colorchooser.scss  _comboboxes.scss  _decorations.scss  _dialogs.scss  _expanders.scss  _filechoosers.scss  _flowbox.scss  _headerbars.scss  _index.scss  _infobar.scss  _links.scss  _lists.scss  _menus.scss  _notebooks.scss  _notifications.scss  _pathbars.scss  _popovers.scss  _printdialogs.scss  _progressbars.scss  _scales.scss  _scrollbars.scss  _selections.scss  _sidebars.scss  _spinbutton.scss  _spinner.scss  _textentries.scss  _tooltips.scss  _treeviews.scss  _typography.scss
src/wm/: Makefile.am
src/wm/asset/assets-metacity-scripts/: clone-assets-metacity.sh  render-assets-metacity.sh
src/wm/asset/assets-openbox-scripts/: clone-assets-openbox.sh
src/wm/asset/assets-xfwm-scripts/: recolor-assets-xfwm.sh  render-assets-xfwm.sh
src/wm/metacity-1/dark/: metacity-theme-3.xml
src/wm/metacity-1/dark-compact/: metacity-theme-3.xml
src/wm/metacity-1/light/: metacity-theme-3.xml
src/wm/metacity-1/light-compact/: metacity-theme-3.xml
src/wm/openbox-3/: compton.conf  recolor-openbox.sh  themerc-dark.in  themerc-light.in  themerc.in
(+195 files in other folders)
